# siglent-sds-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FIX_README.md  NOTICE.md  README.md  blind_test.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  mcp-client-config.md  official-sources.md  project-roadmap.md  release-checklist.md  report-generation.md  scpi-notes.md  sds824x-hd-command-matrix.md  sds824x-hd-knowledge-base.md  sds824x-hd-plan.md  upstream-reference.md  verification-workflow.md
docs/capture-recipes/: auto-find-waveform.md  modbus-rtu.md  rs485-differential.md  screenshot.md  uart-2mbps.md  waveform-export.md
examples/: analyze_rs485_pair.py  auto_find_waveform_tcp.py  capture_rs485_pair_tcp.py  capture_uart_2mbps_tcp.py  generate_report.py  idn_test.py  modbus_timing.py  screen_capture_tcp.py  tcp_idn_test.py  waveform_tcp.py
scripts/: audit_probe.py  audit_probe2.py  audit_verify.py  scpi_probe.py  uart_decode.py  uart_decode2.py
src/siglent_sds_mcp/: __init__.py  artifacts.py  auto_setup.py  modbus_timing.py  report.py  rs485_analyzer.py  scope_driver.py  server.py  (+7 more)
tests/: test_auto_find_compat.py  test_auto_setup.py  test_auto_setup_mock.py  test_modbus_timing.py  test_rs485_analyzer.py  test_scope_driver_mock.py  test_sds_units.py  test_tcp_binary_prefix.py  test_tcp_transport_parser.py  test_uart_analyzer.py  test_uart_capture.py  test_uart_capture_auto.py  test_uart_decoder.py  test_unit_parsing.py  test_wavedesc.py  test_wavedesc_parser.py  test_waveform_capture_modes.py  test_waveform_stats.py
(+4 files in other folders)
