[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siglent-sds-mcp"
version = "0.1.0"
description = "MCP server for SIGLENT SDS824X HD oscilloscope control via SCPI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "wolog1" }
]
dependencies = [
  "mcp[cli]>=1.27,<2",
  "pyvisa>=1.14",
  "pydantic>=2.7",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
siglent-sds-mcp = "siglent_sds_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "examples", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
